--- a/app/src/main/java/com/example/graficacion/MainWindow.form
+++ b/app/src/main/java/com/example/graficacion/MainWindow.form
@@ -614,7 +614,7 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="jTextField9" min="-2" max="-2" attributes="0"/>
+                                      <Component id="JTXAngulo" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="jButton10" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
@@ -628,7 +628,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jTextField9" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="JTXAngulo" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jButton10" min="-2" max="-2" attributes="0"/>
@@ -638,7 +638,7 @@
                     </DimensionLayout>
                   </Layout>
                   <SubComponents>
-                    <Component class="javax.swing.JTextField" name="jTextField9">
+                    <Component class="javax.swing.JTextField" name="JTXAngulo">
                       <Properties>
                         <Property name="text" type="java.lang.String" value="0"/>
                       </Properties>
